--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>cn.hust.spring</groupId>
     <artifactId>spring-annotation-learn</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>spring-01-annotation</module>
+    </modules>
 
 
 </project>
