--- a/spring-01-annotation/pom.xml
+++ b/spring-01-annotation/pom.xml
@@ -48,6 +48,21 @@
             <version>8.0.13</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-aspects -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>4.3.13.RELEASE</version>
+        </dependency>
+
+        <!--Spring 操作数据库的工具类-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>4.3.13.RELEASE</version>
+        </dependency>
+
+
 
     </dependencies>
 </project>
